ISDM_CRUD_CON_AJAX_Y_API Agregado con su .sql

--- a/Ejercicios/Investigacion45.html
+++ b/Ejercicios/Investigacion45.html
@@ -46,7 +46,10 @@
     <p>Esta función sólo trabaja con string codificados en UTF-8.</p>
     <h5>Valores devueltos</h5>
     <p>Devuelve el valor codificado en json en un tipo de PHP apropiado. Los valores <i>true, false</i> y <i>null</i> son devueltos como <b>true, false</b> y <b>null</b> respectivamente. null es devuelto si el parámetro json no se puede decodificar o si los datos codificados son más profundos que el límite de recursividad.</p>
-
+    <h5>Resolución:</h5>
+    <p>El resultado mostrado será:</p>
+    <p>var_dump($data); </font><font color="6C6E6F">// Imprime object(stdClass)#1 (2) {["nombre"] => varchar(Jhon), ["edad"] => int(30)}</font></p>
+<br>
 
 </div>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
