Agregados cambios en index, main

--- a/Ejercicios/enlacesEjercicios.html
+++ b/Ejercicios/enlacesEjercicios.html
@@ -34,7 +34,7 @@
   </nav>
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../ISDM_CRUD_CON_AJAX_Y_API/index.php">
+      <a class="navbar-brand" href="#">
         Actividad - CRUD con AJAX jQuery consumiendo una API en PHP </a>
     </div>
   </nav>
